--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "http.proxy": "https://127.0.0.1:1202",
-    "go.gopath": "D:\\projects\\mgrok",
     "go.autocompleteUnimportedPackages": true,
-    "go.buildTags": "debug"
+    "go.buildTags": "debug",
+    "go.gopath": "${workspaceRoot}"
 }
