--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 *.swp
 bin/
 pkg/
-src/ngrok/client/assets/assets_release.go
-src/ngrok/server/assets/assets_release.go
+src/code.google.com
+src/github.com
+src/golang.org
+src/bitbucket.org
+src/launchpad.net
+src/gopkg.in
+src/ngrok/client/assets
+src/ngrok/server/assets
 src/ngrok/main/ngrok/debug
 src/ngrok/main/ngrokd/debug
