server side debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,19 +16,21 @@
                 "gopath": "${workspaceRoot}"
             },
             "showLog": true,            
+            /*
             "program": "${workspaceRoot}/src/ngrok/main/ngrok/ngrok.go",
             "args": [
                 "-log=stdout",
                 "start",
                 "maishu"
             ]
-            /*
+            */
+            
             "program": "${workspaceRoot}/src/ngrok/main/ngrokd/ngrokd.go",
             "args": [
-                "domain=t.mgrok.cn:80",
-                "httpAddr=:8081",
-                "httpsAddr=:8082"
-            ],*/
+                "-domain=t.mgrok.cn",
+                "-httpAddr=:8081",
+                "-httpsAddr=:8082"
+            ]/*,*/
         }
     ]
 }
