移除 controller 接口

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,8 @@
             "args": [
                 "-log=stdout",
                 "start",
-                "maishu"
+                "maishu",
+                "ssh"
             ]
             /**/
             /*            
