--- a/src/ngrok/main/ngrok/ngrok.yaml
+++ b/src/ngrok/main/ngrok/ngrok.yaml
@@ -9,5 +9,6 @@ tunnels:
     maishu:
         # hostname: maishu.t.mgrok.cn
         proto:
+            # http: www.baiddxx234.com:80
             http: 127.0.0.1:8080
     
