--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,16 +20,16 @@
             "program": "${workspaceRoot}/main/client/mgrok.go",
             "args": [
                 "-log=stdout",
+                "-log-level=DEBUG",
                 "start-all",
             ]
-            /**/
-             /*         
-            "program": "${workspaceRoot}/main/server/mgrokd.go",
-            "args": [
-                "-domain=t.mgrok.cn",
-                "-httpAddr=:8081",
-                "-httpsAddr=:8082"
-            ]  */
+            
+            // "program": "${workspaceRoot}/main/server/mgrokd.go",
+            // "args": [
+            //     "-domain=t.mgrok.cn",
+            //     "-httpAddr=:8081",
+            //     "-httpsAddr=:8082"
+            // ] 
         }
     ]
 }
