--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ main/client/debug
 main/client/mgrok
 main/server/debug
 main/server/mgrokd
+main/httpProxy/debug
+main/httpProxy/httpProxy
 .DS_Store
 ._.DS_Store
 *.exe
