--- a/main/client/mgrok.yaml
+++ b/main/client/mgrok.yaml
@@ -1,13 +1,10 @@
 server_addr: t.mgrok.cn:4443
-trust_host_root_certs: false
 tunnels:
-    ssh:                      #alinq.cn
+    ssh:                     
         remote_port: 40022
         proto:
             tcp: service4.alinq.cn:22
     maishu:
-        # hostname: maishu.t.mgrok.cn
         proto:
-            # http: www.baiddxx234.com:80
             http: 127.0.0.1:8080
     
